--- a/client/public/viewer.less
+++ b/client/public/viewer.less
@@ -7,6 +7,10 @@
 @small-tab-size: 320px;
 @small-nav-size: 80px;
 
+.hidden { // KIDS ADAPTATION
+    display: none!important;
+}
+
 html, body {
 	overflow: hidden;
 }
@@ -639,6 +643,12 @@ html, body {
                         }
                         &.botones-lingual {
                             background-image: url(/botones/lingual.png);
+                        }
+                        &.botones-temporal-bucal {
+                            background-image: url(/botones/temporal-bucal.png);
+                        }
+                        &.botones-temporal-lingual {
+                            background-image: url(/botones/temporal-lingual.png);
                         }
 
                         .mark {
