--- a/client/public/viewer.less
+++ b/client/public/viewer.less
@@ -11,6 +11,25 @@
     display: none!important;
 }
 
+.aclaraciones { // KIDS ADAPTATION
+    padding: 10px;
+    padding-top: 20px;
+    margin: 5px;
+    margin-top: 20px;
+    background: #fff;
+    border-radius: 10px;
+    position: relative;
+}
+
+.aclaraciones::before {
+    position: absolute;
+    content: 'Aclaraciones';
+    top: 0;
+    left: 35%;
+    font-size: .8rem;
+    font-weight: bold;
+}
+
 html, body {
 	overflow: hidden;
 }
