Visor adaptado a tratamientos KIDS

--- a/client/public/viewer.less
+++ b/client/public/viewer.less
@@ -21,6 +21,10 @@
     position: relative;
 }
 
+.aclaraciones p {
+    font-size: .9rem;
+}
+
 .aclaraciones::before {
     position: absolute;
     content: 'Aclaraciones';
